[gd_scene load_steps=4 format=3 uid="uid://np0vw36v8swo"]

[ext_resource type="Script" path="res://scenes/environment/mud/mud_pit.gd" id="1_bkwlq"]
[ext_resource type="PackedScene" uid="uid://dwmlxdr1p1nso" path="res://models/mud-pile-slanted.glb" id="2_lui8g"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iscic"]

[node name="MudPit" type="Area3D"]
collision_layer = 0
gravity_space_override = 3
gravity = 1.0
script = ExtResource("1_bkwlq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.707986, 0, -0.414123)
shape = SubResource("CylinderShape3D_iscic")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.577503, 0, 0.115713)
shape = SubResource("CylinderShape3D_iscic")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.399331, 0, 0.222421)
shape = SubResource("CylinderShape3D_iscic")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.218543, 0, 0.754962)
shape = SubResource("CylinderShape3D_iscic")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0681769, 0, -0.104924)
shape = SubResource("CylinderShape3D_iscic")

[node name="mud-pile-slanted" parent="." instance=ExtResource("2_lui8g")]
visible = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
